# downloadarr

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: jobs.py  library.py  playlists.py  queue.py  settings.py  tracks.py
backend/app/db/: models.py  session.py  settings_store.py
backend/app/downloaders/: __init__.py  base.py  nntp.py  qbittorrent.py  sabnzbd.py  torrent.py  ytdlp.py
backend/app/indexers/: __init__.py  base.py  newznab.py  nzbhydra.py  prowlarr.py  spotdl.py  torznab.py  ytdlp.py
backend/app/indexers/free/: __init__.py  nyaa.py  torrents_csv.py  x1337.py
backend/app/pipeline/: filters.py  organize.py  release_parser.py  run.py  score.py  specifications.py  specs.py  tag.py
backend/app/resolvers/: __init__.py  ai_video.py  apple_music.py  base.py  soundcloud.py  spotify.py  youtube.py
backend/app/services/: audio.py  cleanup.py  events.py  musicbrainz.py  progress.py  runner.py  tools.py  track_picker.py  trackers.py
backend/app/services/torrents/: engine.py
backend/app/services/usenet/: nntp.py  nzb.py  postproc.py
backend/app/workers/: tasks.py
backend/musicdownloadarr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
web/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/history/: page.tsx
web/app/jobs/: page.tsx
web/app/playlists/: page.tsx
web/app/playlists/[id]/: page.tsx
web/app/queue/: page.tsx
web/app/settings/: page.tsx
web/components/: candidate-row.tsx  manual-search.tsx  page-shell.tsx  providers.tsx  sidebar.tsx  source-detector.tsx  status-pill.tsx  test-button.tsx  topbar.tsx  track-card.tsx  track-progress.tsx
web/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  skeleton.tsx  switch.tsx  tabs.tsx  tooltip.tsx
web/lib/: api.ts  source-detect.ts  types.ts
web/scripts/: start-api.mjs
