[project]
name = "musicdownloadarr"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    "httpx>=0.28",
    "yt-dlp>=2025.1.15",
    "spotipy>=2.24",
    "ytmusicapi>=1.8",
    "mutagen>=1.47",
    "anthropic>=0.42",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.1",
    "rarfile>=4.2",
    "rapidfuzz>=3.10",
]

[project.optional-dependencies]
usenet-fast = [
    # sabyenc3 ships C-based wheels for most Python versions but on the
    # newest Python (e.g. 3.13) pip falls back to a source build that
    # needs MSVC. The pure-Python yEnc decoder we ship works without it,
    # just slower per segment. Install this extra for faster Usenet.
    "sabyenc3>=5.4",
]
torrents = [
    # libtorrent on Windows must be installed via conda or a prebuilt
    # binary (rasterbar.org). It is intentionally left out of the
    # required deps so `pip install -e .` works on plain CPython.
    # See README → "Torrent engine install".
    "libtorrent>=2.0",
]
ai = [
    "faster-whisper>=1.1",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
